Fixed Header and Footer spacing. Added initial styling to body of webpage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,37 +3,17 @@
 }
 
 * {
-  border: 1px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* border: 1px;
   border-style: solid;
-  border-color: red;
+  border-color: red; */
 }
-
-
-/*main {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 2%;
-}
-*/
-
-/*section {
-  display: block;
-}
-*/
 
 body {
     background-color: #d9dcd6;
 }
 
-/* header {
-    display: flex;
-    padding: 60px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #404547;
-    color: #ffffff;
-    width: 96%;
-} */
-
+/* Header CSS */
 header{
   display:flex;
   justify-content: space-between;
@@ -56,9 +36,13 @@ header{
   margin:auto 0;
 }
 
+header  h1 {
+  font-size: 50px;
+}
 
-header h1 {
-  font-size: 48px;
+header  h2 {
+  font-size: 25px;
+  font-weight: lighter;
 }
 
 .logo {
@@ -69,6 +53,7 @@ header h1 {
   border-radius: 50%;
 }
 
+/* Nav CSS */
 nav{
   padding: 10px;
   align-items: center;
@@ -104,11 +89,70 @@ nav li a:hover {
     color: #9c9cee;
 }
 
+/* section *{
+  border: 1px;
+  border-style: solid;
+  border-color: blue;
+
+} */
+
+section {
+  display: flex;
+  flex-direction: row;
+  margin: 10%;
+}
+
+section .sectionHeadings {
+  display: flex;
+  flex-direction: column;
+
+  margin-right: 25px;
+  width: 20vw;
+  /* height: 20vh; */
+  align-items: center;
+  border-right: 5px solid grey;
+  padding-right: 20px;
+}
+
+section h2{
+  margin: auto;
+  font-size: 40px;
+  text-align: right;
+}
+
+section article {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  /* height: 20vh; */
+  align-items: left;
+}
+
+.headshot{
+  width: 100%;
+  border-radius: 10%;
+}
+
+section p {
+  display:flex;
+  margin: auto 0;
+}
+
+/* Footer CSS */
 footer {
+    padding: 5px;
     text-align: center;
     background-color: #404547;
     color: #ffffff;
   }
+
+footer h5{
+  padding-bottom: 2px;
+}
+
+footer p{
+  padding-top: 2px;
+}
 
 /* using a mobile-first approach, use `min-width` values going from narrow -> wide for a responsive design */
 
